--- a/css/puzzle.css
+++ b/css/puzzle.css
@@ -33,7 +33,7 @@ body {
 	box-shadow:6px 6px 15px 0 rgba(20,20,20,.6); 
 }
 #board div {
-	background: url("/images/grid4x4.png") no-repeat scroll 0 0 #ffffff;
+	/*background: url("/images/grid4x4.png") no-repeat scroll 0 0 #ffffff;*/
 	cursor: pointer;
 	height: 60px;
 	line-height: 60px;
