--- a/css/puzzle.css
+++ b/css/puzzle.css
@@ -32,8 +32,10 @@ body {
 	width: 240px; 
 	box-shadow:6px 6px 15px 0 rgba(20,20,20,.6); 
 }
+#boardold{
+	background: url("/images/grid4x4.png") no-repeat scroll 0 0 #ffffff;
+}
 #board div {
-	/*background: url("/images/grid4x4.png") no-repeat scroll 0 0 #ffffff;*/
 	cursor: pointer;
 	height: 60px;
 	line-height: 60px;
